Remove extraneous spaces

--- a/microsetta_interface/translations/es_MX/LC_MESSAGES/messages.po
+++ b/microsetta_interface/translations/es_MX/LC_MESSAGES/messages.po
@@ -985,14 +985,14 @@ msgstr ""
 "Hay desde cientos de millones hasta cientos de miles de millones de "
 "diferentes tipos de bacterias que viven en el planeta tierra. Esto eclipsa "
 "los escasos 2 millones de diferentes tipos de animales y plantas que puedes "
-"ver con tus ojos. El <span id = \"average-us-tooltip\" class = "
-"\"tooltipper\" data-title = \"Basado en muestras fecales de los "
+"ver con tus ojos. El <span id=\"average-us-tooltip\" class="
+"\"tooltipper\" data-title=\"Basado en muestras fecales de los "
 "participantes de Microsetta en los Estados Unidos\"> promedio </span> "
 "estadounidense tiene <strong> 187 </strong> diferentes tipos de microbios en"
 " una muestra de heces, que es más baja que la que encontramos en personas "
 "que llevan un estilo de vida más cazador-recolector, como el <strong> 306 "
-"</strong> que encontramos en muestras de <span id = \"taxa-tooltip\" class ="
-" \"tooltipper\" data-title = \"Los Hadza son un grupo de cazadores-"
+"</strong> que encontramos en muestras de <span id=\"taxa-tooltip\" class ="
+" \"tooltipper\" data-title=\"Los Hadza son un grupo de cazadores-"
 "recolectores indígenas en Tanzania. El resumen del microbioma Hadza se basa "
 "en <a href='foobar.com'> Smits et al. Science 2017 </ a > \"data-html =\" "
 "true \"> Hadza </span>."
@@ -1054,8 +1054,8 @@ msgid ""
 msgstr ""
 "Una de las formas poderosas en que los científicos del microbioma analizan "
 "los datos, es observando las similitudes entre las muestras. Para hacer "
-"esto, calculamos una <span id = \"similarity-tooltip\" class = "
-"\"tooltipper\" data-html = \"true\" data-title = \"Hay <i> muchas </i> "
+"esto, calculamos una <span id=\"similarity-tooltip\" class="
+"\"tooltipper\" data-html=\"true\" data-title=\"Hay <i> muchas </i> "
 "formas de formar una distancia . Una forma es basar la distancia de la "
 "fracción de microbios en común en su muestra con cada otra muestra. Por lo "
 "general, tenemos pocos de los mismos exactos microbios en común con otras "
@@ -1076,8 +1076,8 @@ msgstr ""
 "Aquí, comparamos su muestra a todas las demás en nuestra base de datos y "
 "examinamos las 100 muestras más similares a la suya. Estas personas "
 "respondieron sus cuestionarios de la siguiente manera; la respuesta está "
-"coloreada en <span class = \"similarity-fontstyle-same\"> verde claro "
-"</span> si coincide con tu respuesta y en <span class = \"similarity-"
+"coloreada en <span class=\"similarity-fontstyle-same\"> verde claro "
+"</span> si coincide con tu respuesta y en <span class=\"similarity-"
 "fontstyle-different\"> marrón </span> si tu respuesta es diferente ."
 
 #: templates/new_results_page.jinja2:1550
@@ -1270,10 +1270,10 @@ msgstr ""
 "Hay muchos recursos disponibles en línea para obtener información sobre "
 "microbiomas. Si desea obtener más información, le recomendamos la <a "
 "href=\"https://asm.org/Browse-By-Topic/Newsroom/Clinical/Microbiome\"> "
-"Sociedad Estadounidense de Microbiología </a>, <a href = "
+"Sociedad Estadounidense de Microbiología </a>, <a href="
 "\"https://microbe.net/\"> microBEnet </a>, la <a "
 "href=\"http://www.probioticchart.ca/\"> Tabla canadiense de probióticos </a>"
-" y la <a href = \"https://gastro.org/aga-leadership/centers/aga-center-for-"
+" y la <a href=\"https://gastro.org/aga-leadership/centers/aga-center-for-"
 "gut-microbiome-research-education/\">Asociación Estadounidense de "
 "Gastroenterología </a>."
 
@@ -1332,7 +1332,7 @@ msgid ""
 "massive data matrix that place very similar samples near each other and less"
 " similar samples far apart.\">How are these maps produced?</span>"
 msgstr ""
-"<span id = \"microbiome-maps-tooltip\" class = \"tooltipper\" data-title = "
+"<span id=\"microbiome-maps-tooltip\" class=\"tooltipper\" data-title="
 "\"Visualizar datos complejos es difícil. Sin embargo, una forma en que los "
 "investigadores de microbiomas lo hacen es a través de una técnica llamada "
 "análisis de coordenadas principales (PCoA). los millones de similitudes de "
@@ -1614,8 +1614,8 @@ msgstr ""
 " por su muestra. La forma en que calculamos la diversidad alfa también es a "
 "través de <a href=“https://qiime2.org” target=“_blank”> QIIME 2 </a>, y se "
 "puede encontrar más información al respecto en la diversidad alfa y beta < a"
-" href = “https://docs.qiime2.org/2020.6/tutorials/moving-pictures/#alpha-"
-"and-beta-diversity-analysis” target = “_ blank”> secciones </a> del tutorial"
+" href=“https://docs.qiime2.org/2020.6/tutorials/moving-pictures/#alpha-"
+"and-beta-diversity-analysis” target="_ blank"> secciones </a> del tutorial"
 " de QIIME 2"
 
 #: templates/sample_results.jinja2:168
@@ -1646,11 +1646,11 @@ msgstr ""
 "la métrica que se muestra aquí, conocida como Unifrac no ponderado. Puede "
 "encontrar una descripción general de esta métrica <a "
 "href=“https://en.wikipedia.org/wiki/UniFrac” target=“_blank”> aquí </a> o "
-"comprender mejor su derivación <a href = “https: "
+"comprender mejor su derivación <a href=“https: "
 "//www.ncbi.nlm.nih.gov/pmc/articles/PMC1828774/ “target =“ _ blank “> aquí "
 "</a>. Este cálculo se realiza con <a href=“https://qiime2.org” "
 "target=“_blank”> QIIME 2 </a>, y se puede encontrar más información al "
-"respecto en la diversidad alfa y beta <a href = “ "
+"respecto en la diversidad alfa y beta <a href=“ "
 "https://docs.qiime2.org/2020.6/tutorials/moving-pictures/#alpha-and-beta-"
 "diversity-analysis “target =“ _ blank “> secciones </a> del tutorial de "
 "QIIME 2"
