--- a/microsetta_interface/translations/en_US/LC_MESSAGES/messages.po
+++ b/microsetta_interface/translations/en_US/LC_MESSAGES/messages.po
@@ -800,8 +800,8 @@ msgstr ""
 #: templates/new_results_page.jinja2:1271
 msgid ""
 "16S.  This technique produces DNA sequences from a specific variable "
-"region (\"V4\") within a microbial gene (\"the 16S small subunit "
-"ribosomal gene\"). DNA sequences from this region of this gene can be "
+"region (V4) within a microbial gene (the 16S small subunit "
+"ribosomal gene). DNA sequences from this region of this gene can be "
 "used like a microbial barcode, providing researchers evidence of the "
 "types of microbes that may be present in your sample."
 msgstr ""
@@ -1109,7 +1109,7 @@ msgstr ""
 msgid ""
 "For your sample, we performed a technique called amplicon sequencing "
 "where we examine pieces of DNA corresponding to a particular gene. "
-"Specifically, we sequenced the fourth variable region (\"V4\") of the 16S"
+"Specifically, we sequenced the fourth variable region (V4) of the 16S"
 " rRNA small subunit ribosomal gene. DNA sequences from this region of "
 "this gene can be used like a microbial barcode, providing researchers "
 "evidence of the types of microbes that may be present in your sample."
