--- a/microsetta_interface/translations/es_MX/LC_MESSAGES/messages.po
+++ b/microsetta_interface/translations/es_MX/LC_MESSAGES/messages.po
@@ -863,14 +863,14 @@ msgstr ""
 #: templates/new_results_page.jinja2:1271
 msgid ""
 "16S.  This technique produces DNA sequences from a specific variable region "
-"(\"V4\") within a microbial gene (\"the 16S small subunit ribosomal gene\")."
+"(V4) within a microbial gene (the 16S small subunit ribosomal gene)."
 " DNA sequences from this region of this gene can be used like a microbial "
 "barcode, providing researchers evidence of the types of microbes that may be"
 " present in your sample."
 msgstr ""
 "16S. Esta técnica produce secuencias de ADN de una región variable "
-"específica (\"V4\") dentro de un gen microbiano ("la subunidad menor 16S del"
-" gen ribosómico"). Las secuencias de ADN de esta región de este gen se "
+"específica (V4) dentro de un gen microbiano (la subunidad menor 16S del"
+" gen ribosómico). Las secuencias de ADN de esta región de este gen se "
 "pueden usar como un código de barras microbiano, proporcionando a los "
 "investigadores evidencia de los tipos de microbios que pueden estar "
 "presentes en su muestra."
@@ -1243,14 +1243,14 @@ msgstr ""
 msgid ""
 "For your sample, we performed a technique called amplicon sequencing where "
 "we examine pieces of DNA corresponding to a particular gene. Specifically, "
-"we sequenced the fourth variable region (\"V4\") of the 16S rRNA small "
+"we sequenced the fourth variable region (V4) of the 16S rRNA small "
 "subunit ribosomal gene. DNA sequences from this region of this gene can be "
 "used like a microbial barcode, providing researchers evidence of the types "
 "of microbes that may be present in your sample."
 msgstr ""
 "Para su muestra, realizamos una técnica llamada secuenciación de amplicones "
 "en la que examinamos fragmentos de ADN correspondientes a un gen en "
-"particular. Específicamente, secuenciamos la cuarta región variable (\"V4\")"
+"particular. Específicamente, secuenciamos la cuarta región variable (V4)"
 " del gen ribosómico de subunidad menor de ARNr 16S. Las secuencias de ADN de"
 " esta región de este gen se pueden usar como un código de barras microbiano,"
 " proporcionando a los investigadores evidencia de los tipos de microbios que"
