Update messages.po for ja_JP

--- a/microsetta_interface/translations/ja_JP/LC_MESSAGES/messages.po
+++ b/microsetta_interface/translations/ja_JP/LC_MESSAGES/messages.po
@@ -3034,9 +3034,8 @@ msgid ""
 "from the TMI database. "
 msgstr ""
 "登録後、研究状況、参加申し込みに必要な手順、アンケート調査に関する手続きの連絡"
-"を会報で受け取ることに同意します。私は、会報内に記載されたリンクからいつでも会"
-"報の購読を中止できることに同意します。また、TMIのデータベースから便サンプルの状"
-"況の更新報告を受け取ることに同意します。 "
+"をメールマガジンで受け取ることに同意します。私は、メールマガジン内に記載されたリンクからいつでも会"
+"報の購読を中止できることに同意します。"
 
 #: templates/submit_interest.jinja2:596
 msgid "Previous"
