Spanish translation updates

--- a/microsetta_interface/translations/es_ES/LC_MESSAGES/messages.po
+++ b/microsetta_interface/translations/es_ES/LC_MESSAGES/messages.po
@@ -2263,21 +2263,19 @@ msgid ""
 "otus\">FILLIN</strong> we find in samples from the <span id=\"taxa-"
 "tooltip\" class=\"tooltipper\" data-title=\"The Hadza are an indigenous "
 "hunter-gather group in Tanzania. The summary of the Hadza microbiome is "
-"based on Smits et al. Science 2017\" data-"
+"based on <a href='foobar.com'>Smits et al. Science 2017</a>\" data-"
 "html=\"true\">Hadza</span>."
 msgstr ""
 "Hay entre cientos de millones y cientos de miles de millones de distintos"
 " tipos de bacterias que viven en el planeta tierra. Esto empequeñece a "
 "los escasos 2 millones de distintos tipos de animales y plantas que puede"
 " ver con sus ojos. El <span id=\"average-us-tooltip\" class=\"tooltipper\" "
-"data-title=\"Based on fecal samples from Microsetta participants in the "
-"United States\">promedio</span> de Estadounidenses tienen  "
+"data-title=\"Basado en muestras fecales de participantes de Microsetta en los Estados Unidos\">promedio</span> de Estadounidenses tienen  "
 "<strong>93</strong> diferentes tipos de microbios en una muestra de "
 "heces, el cual es inferior al que encontramos en personas que viven un "
 "estilo de vida más cazador-recolector, como los <strong>132</strong> que "
 "encontramos en muestras de <span id=\"taxa-tooltip\" class=\"tooltipper\" "
-"data-title=\"The Hadza are an indigenous hunter-gather group in Tanzania. "
-"The summary of the Hadza microbiome is based on Smits et al. Science 2017\" data-"
+"data-title=\"Los Hadza son un grupo indígena de cazadores-recolectores de Tanzania. El reporte del microbioma Hadza se basa en Smits et al. Science 2017\" data-"
 "html=\"true\">Hadza</span>."
 
 #: templates/new_results_page.jinja2:1397
