--- a/microsetta_interface/translations/es_MX/LC_MESSAGES/messages.po
+++ b/microsetta_interface/translations/es_MX/LC_MESSAGES/messages.po
@@ -2338,14 +2338,8 @@ msgid ""
 msgstr ""
 "Una forma eficaz en que los científicos analizan los datos del microbioma"
 " es observando las similitudes entre las muestras. Para hacer esto, "
-"nosotros calculamos una <span id=“similarity-tooltip” class=“tooltipper” "
-"data-html=“true” data-title=“There are <i>a lot</i> of ways to form a "
-"distance. One way is to base the distance off of the fraction of microbes"
-" in common in your sample with each other sample. We typically share few "
-"of the exact same microbes in common with other people though which is "
-"problematic when comparing exact microbes. To account for this, "
-"researchers often take the evolutionary relationships among microbes into"
-" account when forming these distances.”>distancia</span> de su muestra a "
+"nosotros calculamos una <span id=\"similarity-tooltip\" class=\"tooltipper\" "
+"data-html=\"true\" data-title=\"Hay muchas maneras de formar una distancia. Una forma es basar la distancia en la fracción de microbios en común en su muestra con otra muestra. Por lo general, compartimos algunos de los mismos microbios en común con otras personas, lo cual es problemático cuando se comparan microbios exactos. Para dar cuenta de esto, los investigadores suelen tener en cuenta las relaciones evolutivas entre los microbios al formar estas distancias.\">distancia</span> de su muestra a "
 "todas las demás muestras basada en los microbios observados."
 
 #: templates/new_results_page.jinja2:1466
