--- a/microsetta_interface/translations/es_MX/LC_MESSAGES/messages.po
+++ b/microsetta_interface/translations/es_MX/LC_MESSAGES/messages.po
@@ -2186,7 +2186,7 @@ msgid ""
 "more closely resemble those from 'the office surfaces,' which makes sense"
 " as skin cells are constantly shedding from you. In an indoor "
 "environment, dust is typically composed of up to 50%% dead skin cells."
-msgstr "Los microbios no solo viven dentro y sobre su cuerpo; ¡ellos están en todos lados! Usando las mismas técnicas descritas en los mapas anteriores, comparamos su microbioma con muestras recolectadas de las superficies de las oficinas de un hospital nuevo.<br /><br />Como puede ver, las muestras de la piel tienden a parecerse más a las de “las superficies de la oficina”, lo que tiene sentido ya que las células de la piel se desprenden constantemente de usted. En un ambiente interior, el polvo se compone de hasta un 50% de las células muertas de la piel."
+msgstr "Los microbios no solo viven dentro y sobre su cuerpo; ¡ellos están en todos lados! Usando las mismas técnicas descritas en los mapas anteriores, comparamos su microbioma con muestras recolectadas de las superficies de las oficinas de un hospital nuevo.<br /><br />Como puede ver, las muestras de la piel tienden a parecerse más a las de 'las superficies de la oficina', lo que tiene sentido ya que las células de la piel se desprenden constantemente de usted. En un ambiente interior, el polvo se compone de hasta un 50%% de las células muertas de la piel."
 
 #: templates/new_results_page.jinja2:457
 msgid "The Microsetta Initiative"
@@ -2407,7 +2407,7 @@ msgid ""
 " down below in a variety of categories. Find out how you compare to your "
 "fellow citizen scientists."
 msgstr ""
-"Mientras que nuestro ADN humano es 99% similar a otro, es posible que dos"
+"Mientras que nuestro ADN humano es 99%% similar a otro, es posible que dos"
 " personas no compartan especies microbianas, lo que significa que "
 "nuestros microbiomas pueden ser completamente únicos. Nosotros hemos "
 "analizado su muestra de microbioma utilizando métodos de secuenciación de"
