--- a/microsetta_interface/translations/es_ES/LC_MESSAGES/messages.po
+++ b/microsetta_interface/translations/es_ES/LC_MESSAGES/messages.po
@@ -2429,7 +2429,7 @@ msgid ""
 msgstr ""
 "Hay 40 billones de células microbianas en nuestro cuerpo. A esta "
 "colección de células microbianas se le conoce como el microbioma humano. "
-"Con aproximadamente 1 libras (,45 kg) de ellas solo en nuestro intestino,"
+"Con aproximadamente 1 libra (,45 kg) de ellas solo en nuestro intestino,"
 " nosotros estamos en una misión para hacer descubrimientos críticos sobre"
 " la función que tienen en nuestras vidas. Gracias por contribuir en "
 "nuestro proyecto de investigación y ayudar al avance de la ciencia."
